// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusIndicator /> should render a dot status label 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    color="rgb(192, 48, 0)"
    type="circle"
  />
  <class_1>
    Test
  </class_1>
</span>
`;

exports[`<StatusIndicator /> should render a dot status label with default values 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    type="circle"
  />
  <class_1>
    Test
  </class_1>
</span>
`;

exports[`<StatusIndicator /> should render a hollow dot status label 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    type="circle-o"
  />
  <class_1>
    Test
  </class_1>
</span>
`;
